# sgs_bnn

./: .gitignore  Manifest.toml  Project.toml  README.md  SGS_Transformers.py  b_reg.ipynb  constraint_map.ipynb  dhbs.ipynb  hello.py  hll_sets.ipynb  hllset_system.ipynb  metadatum_inverted_index.ipynb  pyproject.toml  scripts.sh  sgs_rag.ipynb  simulation.ipynb  svi_2.ipynb
