[project]
name = "sgs-bnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "hnswlib>=0.8.0",
    "ipykernel>=6.29.5",
    "ortools>=9.11.4210",
    "pyro-ppl>=1.9.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
]
